--- a/CMCS Web App/wwwroot/css/site.css
+++ b/CMCS Web App/wwwroot/css/site.css
@@ -1,22 +1,98 @@
+* {
+    font-family: Poppins;
+}
+
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+}
+
+header {
+    background: transparent;
+    justify-content: space-between;
+    position: fixed;
+    width: 100%;
+    display: flex;
+    z-index: 100;
+    align-items: center;
+    padding: 20px 50px;
+    top: 0;
+    left: 0;
+    box-shadow: 3px 3px 20px 1px rgba(0,0,0,0.5);
+    backdrop-filter: blur(3px);
+    border-bottom: 2px solid rgba(255, 255, 255, .4);
 }
 
 body {
-  margin-bottom: 60px;
+    background: linear-gradient(#2a2a2a, #4d4d4d);
+    background-size: cover;
+    background-position: center;
+    margin: 200px;
+    color: #fff;
+}
+
+footer {
+    position: absolute;
+    padding: 5px;
+    font-size: 14px;
+    color: #fff;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background-color: transparent;
+    box-shadow: 3px 3px 20px 1px rgba(0,0,0,0.5);
+    backdrop-filter: blur(3px);
+    border-top: 2px solid rgba(255, 255, 255, .4);
+}
+
+.navbar {
+    background: transparent;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+    .navbar a {
+        color: #fff;
+        font-size: 20px;
+        margin-left: 40px;
+        text-decoration: none;
+        position: relative;
+    }
+
+        .navbar a::before {
+            color: #fff;
+            content: '';
+            background-color: #fff;
+            width: 0;
+            height: 2px;
+            top: 100%;
+            left: 0;
+            position: absolute;
+            transition: .3s;
+        }
+
+        .navbar a:hover::before {
+            width: 100%;
+        }
+
+.logo, .logo:hover {
+    text-decoration: none;
+    font-size: 36px;
+    color: #fff;
 }
