Added Necessary Views & Added Styles
I added the necessary views, and gave them each a title, which briefly describes what that page entails.

I also added styles to the site.css, to help keep the flow of the page ordered and neat. These containers will ensure that, in the case when other functionality is to be added to the Web App, it will not be difficult to manage and organize these additional features on the pages.

--- a/CMCS Web App/Views/Home/Index.cshtml
+++ b/CMCS Web App/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="page">
+    <h1>Home Page</h1>
+    <div class="wrapper">
+        <p>Welcome to the CMCS Web App</p>
+        <p>Use the navigation bar to access the different features of the app.</p>
+        <p>Dean James Greeff - ST10378305</p>
+    </div>
 </div>
