Updated Styles & Pages
Created Form-Box to wrap all the contents within submitting a claim.

Changed the style of buttons and input boxes, to be animated when interacted with.

--- a/CMCS Web App/Views/Home/CreateClaim.cshtml
+++ b/CMCS Web App/Views/Home/CreateClaim.cshtml
@@ -6,5 +6,28 @@
     <h1>Make a Claim</h1>
     <div class="wrapper">
         <p>Please enter in all the required details.</p>
+        <div class="form-box">
+            <div class="input-box">
+                <input type="text" required />
+                <label>Lecturer ID</label>
+            </div>
+
+            <div class="input-box">
+                <input type="text" required />
+                <label>Contract ID</label>
+            </div>
+
+            <div class="input-box">
+                <input type="text" required />
+                <label>Claim Amount</label>
+            </div>
+
+            <div class="input-box">
+                <input type="text" required />
+                <label>Hours Worked</label>
+            </div>
+
+            <button class="btn" type="submit">Submit Claim</button>
+        </div>
     </div>
 </div>
