--- a/CMCS Web App/Views/Home/Index.cshtml
+++ b/CMCS Web App/Views/Home/Index.cshtml
@@ -3,9 +3,8 @@
 }
 
 <div class="page">
-    <h1>Home Page</h1>
+    <h1>Welcome to the CMCS Web App</h1>
     <div class="wrapper">
-        <p>Welcome to the CMCS Web App</p>
         <p>Use the navigation bar to access the different features of the app.</p>
         <p>Dean James Greeff - ST10378305</p>
     </div>
