--- a/CMCS Web App/Views/Home/Login.cshtml
+++ b/CMCS Web App/Views/Home/Login.cshtml
@@ -6,5 +6,8 @@
     <h1>Login</h1>
     <div class="wrapper">
         <p>Please select one of the following options.</p>
+
+        <button class="btn admin" type="submit">Administrator</button>
+        <button class="btn employee" type="submit">Lecturer</button>
     </div>
 </div>
