--- a/CMCS Web App/Views/Home/Index.cshtml
+++ b/CMCS Web App/Views/Home/Index.cshtml
@@ -4,8 +4,6 @@
 
 <div class="page">
     <h1>Welcome to the CMCS Web App</h1>
-    <div class="wrapper">
         <p>Use the navigation bar to access the different features of the app.</p>
-        <p>Dean James Greeff - ST10378305</p>
-    </div>
+        <p>By: Dean James Greeff - ST10378305</p>
 </div>
