Added a Upload File button
Added a choose file button for uploading supporting documents along with requesting a claim.

--- a/CMCS Web App/Views/Home/CreateClaim.cshtml
+++ b/CMCS Web App/Views/Home/CreateClaim.cshtml
@@ -27,7 +27,11 @@
                 <label>Hours Worked</label>
             </div>
 
+            <p class="file">Please upload the supporting documents.</p>
+            <input type="file" name="file" />
+
             <button class="btn" type="submit">Submit Claim</button>
         </div>
+
     </div>
 </div>
