--- a/CMCS Web App/Views/Home/Index.cshtml
+++ b/CMCS Web App/Views/Home/Index.cshtml
@@ -5,5 +5,6 @@
 <div class="page">
     <h1>Welcome to the CMCS Web App</h1>
         <p>Use the navigation bar to access the different features of the app.</p>
-        <p>By: Dean James Greeff - ST10378305</p>
+        <hr />
+        <p>Dean James Greeff - ST10378305</p>
 </div>
