Added more sample data in tables

--- a/CMCS Web App/Views/Home/ReviewClaim.cshtml
+++ b/CMCS Web App/Views/Home/ReviewClaim.cshtml
@@ -16,12 +16,14 @@
                     <th>Claim Amount</th>
                     <th>File</th>
                     <th>Status</th>
+                    <th>Review</th>
                 </tr>
                     <tr style="border: none;">
                         <td>461246</td>
                         <td>123674</td>
                         <td>R4500 </td>
                         <td><a href="#">Invoice.pdf</a></td>
+                        <td>Pending</td>
                         <td>
                         <button class="btn btn-accept" type="submit">
                             <ion-icon name="checkmark-outline"></ion-icon>
@@ -31,6 +33,38 @@
                         </button>
                         </td>
                     </tr>
+
+                <tr style="border: none;">
+                    <td>5135</td>
+                    <td>51345</td>
+                    <td>R2500 </td>
+                    <td><a href="#">Invoice.pdf</a></td>
+                    <td>Pending</td>
+                    <td>
+                        <button class="btn btn-accept" type="submit">
+                            <ion-icon name="checkmark-outline"></ion-icon>
+                        </button>
+                        <button class="btn btn-reject" type="submit">
+                            <ion-icon name="close-outline"></ion-icon>
+                        </button>
+                    </td>
+                </tr>
+
+                <tr style="border: none;">
+                    <td>91236</td>
+                    <td>26712</td>
+                    <td>R7500 </td>
+                    <td><a href="#">Invoice.pdf</a></td>
+                    <td>Pending</td>
+                    <td>
+                        <button class="btn btn-accept" type="submit">
+                            <ion-icon name="checkmark-outline"></ion-icon>
+                        </button>
+                        <button class="btn btn-reject" type="submit">
+                            <ion-icon name="close-outline"></ion-icon>
+                        </button>
+                    </td>
+                </tr>
             </table>
         </div>
     </div>
