--- a/CMCS Web App/wwwroot/css/site.css
+++ b/CMCS Web App/wwwroot/css/site.css
@@ -41,6 +41,7 @@ header {
 
 body {
     background: linear-gradient(#2a2a2a, #4d4d4d);
+    background-image: url("../Images/Background2.png");
     background-size: cover;
     background-position: center;
     margin-top: 125px;
@@ -96,7 +97,8 @@ footer {
 .logo, .logo:hover {
     text-decoration: none;
     font-size: 36px;
-    color: #75ffd3;
+    /*    color: #75ffd3;*/
+    color: #000;
     font-weight: 700;
 }
 
@@ -126,6 +128,7 @@ footer {
 .form-box {
     display: flex;
     background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px);
     flex-direction: column;
     justify-content: center;
     width: 500px;
@@ -264,6 +267,7 @@ footer {
     border-radius: 20px;
     color: white;
     border-spacing: 0 25px;
+    backdrop-filter: blur(3px);
 }
 
     .table th {
