Installed NuGet Packages & Added Register View
Installed the necessary NuGet Packages:
- Microsoft.EntityFrameworkCore
- Microsoft.EntityFrameworkCore.SqlServer
- Microsoft.EntityFrameworkCore.Tools

Added a Register view which will allow new lecturers to register. Once they have registered then they must meet with an Administrator where a contract can be created.

--- a/CMCS Web App/Views/Home/CreateClaim.cshtml
+++ b/CMCS Web App/Views/Home/CreateClaim.cshtml
@@ -26,7 +26,12 @@
                 <input type="text" required />
                 <label>Hours Worked</label>
             </div>
-            <hr />
+
+            <div class="input-box">
+                <input type="text" required />
+                <label>Hourly Rate</label>
+            </div>
+
             <p class="file">Please upload the supporting documents.</p>
             <input type="file" name="file" />
             <hr />
