--- a/CMCS Web App/Views/Home/ReviewClaim.cshtml
+++ b/CMCS Web App/Views/Home/ReviewClaim.cshtml
@@ -26,10 +26,10 @@
                         <td>Pending</td>
                         <td>
                         <button class="btn btn-accept" type="submit">
-                            <ion-icon name="checkmark-outline"></ion-icon>
+                            Approve
                         </button>
                         <button class="btn btn-reject" type="submit">
-                            <ion-icon name="close-outline"></ion-icon>
+                            Reject
                         </button>
                         </td>
                     </tr>
