--- a/CMCS Web App/Views/Shared/_Layout.cshtml
+++ b/CMCS Web App/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
         <nav class="navbar">
             <a asp-controller="Home" asp-action="Index">Home</a>
-            <a asp-controller="Home" asp-action="CreateClaim">Make Claims</a>
+            <a asp-controller="Home" asp-action="CreateClaim">Submit Claims</a>
             <a asp-controller="Home" asp-action="ReviewClaim">Review Claims</a>
             <a asp-controller="Home" asp-action="Login">Login</a>
         </nav>
@@ -27,8 +27,6 @@
             @RenderBody()
         </main>
     </div>
-
-    <footer> &copy; 2024 - PROG6212 - ST10378305 </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
