--- a/CMCS Web App/Views/Home/Index.cshtml
+++ b/CMCS Web App/Views/Home/Index.cshtml
@@ -3,8 +3,17 @@
 }
 
 <div class="page">
-    <h1>Welcome to the CMCS Web App</h1>
+    <div class="box">
+        <h1>Welcome to the CMCS Web App</h1>
         <p>Use the navigation bar to access the different features of the app.</p>
-        <hr />
-        <p>Dean James Greeff - ST10378305</p>
+        <p>Dean James Greeff </p>
+        <p>ST10378305 </p>
+    </div>
+
+    <div class="box">
+        <h1>About Us</h1>
+        <p>Use the navigation bar to access the different features of the app.</p>
+        <p>Dean James Greeff </p>
+        <p>ST10378305 </p>
+    </div>
 </div>
