Created Local Database & Created Migration
Created first migration called "InitialCreate", and updated database through the package manager console.

Added the ConnectionString to the appsettings.json.

Added "Password" as an attribute to the Lecturer model.

--- a/CMCS Web App/Views/Home/Register.cshtml
+++ b/CMCS Web App/Views/Home/Register.cshtml
@@ -22,16 +22,16 @@
             </div>
 
             <div class="input-box">
-                <input type="password" required />
-                <label>Password</label>
-            </div>
-
-            <div class="input-box">
                 <input type="text" required />
                 <label>Faculty</label>
             </div>
 
-            <button class="btn" type="submit">Login</button>
+            <div class="input-box">
+                <input type="password" required />
+                <label>Password</label>
+            </div>
+
+            <button class="btn" type="submit">Register</button>
 
         </div>
     </div>
