--- a/CMCS Web App/Views/Shared/_Layout.cshtml
+++ b/CMCS Web App/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
             <a asp-controller="Home" asp-action="CreateClaim">Submit Claims</a>
             <a asp-controller="Home" asp-action="ReviewClaim">Review Claims</a>
             <a asp-controller="Home" asp-action="Login">Login</a>
+            <a asp-controller="Home" asp-action="Register">Register</a>
         </nav>
     </header>
 
