--- a/CMCS Web App/Views/Home/Register.cshtml
+++ b/CMCS Web App/Views/Home/Register.cshtml
@@ -1,37 +1,44 @@
-﻿@{
+﻿@model CMCS_Web_App.Models.Lecturer;
+@{
     ViewData["Title"] = "Register";
 }
 
 <div class="page">
     <div class="wrapper">
         <div class="form-box">
+
             <h1>Register as Lecturer</h1>
-            <div class="input-box">
-                <input type="text" required />
-                <label>Email</label>
-            </div>
 
-            <div class="input-box">
-                <input type="text" required />
-                <label>First Name</label>
-            </div>
+            <form asp-controller="Home" asp-action="RegisterUser" method="post">
 
-            <div class="input-box">
-                <input type="text" required />
-                <label>Surname</label>
-            </div>
+                <div class="input-box">
+                    <input type="text" name="Email" required />
+                    <label>Email</label>
+                </div>
 
-            <div class="input-box">
-                <input type="text" required />
-                <label>Faculty</label>
-            </div>
+                <div class="input-box">
+                    <input type="text" name="FirstName" required />
+                    <label>First Name</label>
+                </div>
 
-            <div class="input-box">
-                <input type="password" required />
-                <label>Password</label>
-            </div>
+                <div class="input-box">
+                    <input type="text" name="Surname" required />
+                    <label>Surname</label>
+                </div>
 
-            <button class="btn" type="submit">Register</button>
+                <div class="input-box">
+                    <input type="text" name="Faculty" required />
+                    <label>Faculty</label>
+                </div>
+
+                <div class="input-box">
+                    <input type="password" name="Password" required />
+                    <label>Password</label>
+                </div>
+
+                <button class="btn" type="submit">Register</button>
+
+            </form>
 
         </div>
     </div>
