--- a/CMCS Web App/Views/Home/CreateClaim.cshtml
+++ b/CMCS Web App/Views/Home/CreateClaim.cshtml
@@ -1,42 +1,43 @@
-﻿@{
+﻿@model CMCS_Web_App.Models.Claim;
+@{
     ViewData["Title"] = "Create Claim";
 }
 
 <div class="page">
     <div class="wrapper">
         <div class="form-box">
-            <h1>Make a Claim</h1>
+            <h1>Submit a Claim</h1>
             <p>Please enter in all the required details.</p>
-            <div class="input-box">
-                <input type="text" required />
-                <label>Lecturer ID</label>
-            </div>
 
-            <div class="input-box">
-                <input type="text" required />
-                <label>Contract ID</label>
-            </div>
+            <form asp-controller="Home" asp-action="SubmitNewClaim" method="post" enctype="multipart/form-data">
+                
+                <div class="input-box">
+                    <input type="number" asp-for="LecturerId" required />
+                    <label>Lecturer ID</label>
+                </div>
 
-            <div class="input-box">
-                <input type="text" required />
-                <label>Claim Amount</label>
-            </div>
+                <div class="input-box">
+                    <input type="number" asp-for="ClaimAmount" required />
+                    <label>Claim Amount</label>
+                </div>
 
-            <div class="input-box">
-                <input type="text" required />
-                <label>Hours Worked</label>
-            </div>
+                <div class="input-box">
+                    <input type="number" asp-for="HoursWorked" required />
+                    <label>Hours Worked</label>
+                </div>
 
-            <div class="input-box">
-                <input type="text" required />
-                <label>Hourly Rate</label>
-            </div>
+                <div class="input-box">
+                    <input type="number" asp-for="HourlyRate" required />
+                    <label>Hourly Rate</label>
+                </div>
 
-            <p class="file">Please upload the supporting documents.</p>
-            <input type="file" name="file" />
-            <hr />
-            <button class="btn" type="submit">Submit Claim</button>
+                <p class="file">Please upload any supporting documents.</p>
+                <input type="file" name="file" required/>
+                
+
+                <button class="btn" type="submit">Submit Claim</button>
+            </form>
+
         </div>
-
     </div>
 </div>
