--- a/CMCS Web App/Views/Home/ReviewClaim.cshtml
+++ b/CMCS Web App/Views/Home/ReviewClaim.cshtml
@@ -1,71 +1,55 @@
-﻿@{
+﻿@model IEnumerable<CMCS_Web_App.Models.Claim>
+
+@{
     ViewData["Title"] = "Review Claim";
 }
 
 <div class="page">
-    
     <div class="wrapper">
-        
         <div class="table">
+
             <h1>Review Requested Claims</h1>
             <p>Review the list of all requested claims below.</p>
             <table>
-                <tr style="border: none;">
+                <tr>
+                    <th>Claim ID</th>
                     <th>Lecturer ID</th>
-                    <th>Contract ID</th>
+                    <th>Full Name</th>
                     <th>Claim Amount</th>
                     <th>File</th>
-                    <th>Status</th>
                     <th>Review</th>
                 </tr>
-                    <tr style="border: none;">
-                        <td>461246</td>
-                        <td>123674</td>
-                        <td>R4500 </td>
-                        <td><a href="#">Invoice.pdf</a></td>
-                        <td>Pending</td>
-                        <td>
-                        <button class="btn btn-accept" type="submit">
-                            Approve
-                        </button>
-                        <button class="btn btn-reject" type="submit">
-                            Reject
-                        </button>
-                        </td>
-                    </tr>
 
-                <tr style="border: none;">
-                    <td>5135</td>
-                    <td>51345</td>
-                    <td>R2500 </td>
-                    <td><a href="#">Invoice.pdf</a></td>
-                    <td>Pending</td>
-                    <td>
-                        <button class="btn btn-accept" type="submit">
-                            <ion-icon name="checkmark-outline"></ion-icon>
-                        </button>
-                        <button class="btn btn-reject" type="submit">
-                            <ion-icon name="close-outline"></ion-icon>
-                        </button>
-                    </td>
-                </tr>
+                @foreach (var claim in Model)
+                {
+                    @if (claim.ClaimStatus == "Pending")
+                    {
+                        <tr>
+                            <td>@claim.ClaimId</td>
+                            <td>@claim.LecturerId</td>
+                            <td>@claim.Lecturer.FirstName @claim.Lecturer.Surname</td>
+                            <td>R @claim.ClaimAmount</td>
+                            <td><a asp-controller="Home" asp-action="DownloadFile" asp-route-id="@claim.ClaimId">@claim.FileName</a></td>
+                            <td>
+                                <form asp-controller="Home" asp-action="ApproveClaim" method="post">
+                                    <input type="hidden" name="id" value="@claim.ClaimId" />
+                                    <button class="btn btn-accept" type="submit">Approve</button>
+                                </form>
+                                <form asp-controller="Home" asp-action="RejectClaim" method="post">
+                                    <input type="hidden" name="id" value="@claim.ClaimId" />
+                                    <button class="btn btn-reject" type="submit">Reject</button>
+                                </form>
+                            </td>
+                        </tr>
+                    }
+                }
 
-                <tr style="border: none;">
-                    <td>91236</td>
-                    <td>26712</td>
-                    <td>R7500 </td>
-                    <td><a href="#">Invoice.pdf</a></td>
-                    <td>Pending</td>
-                    <td>
-                        <button class="btn btn-accept" type="submit">
-                            <ion-icon name="checkmark-outline"></ion-icon>
-                        </button>
-                        <button class="btn btn-reject" type="submit">
-                            <ion-icon name="close-outline"></ion-icon>
-                        </button>
-                    </td>
-                </tr>
             </table>
         </div>
     </div>
 </div>
+
+@*
+<button class="btn btn-accept" type="submit"> Approve </button>
+<button class="btn btn-reject" type="submit"> Reject </button>
+*@
