Added TrackAllClaims View & Added Alert Messages
Added a TrackAllClaims view which displays all the claim requests, of all statuses, pending, approved and rejected. The view displays the lecturer details, such as their name and email, claim id, lecturer id, claim amount and the status of the claim.

--- a/CMCS Web App/Views/Home/CreateClaim.cshtml
+++ b/CMCS Web App/Views/Home/CreateClaim.cshtml
@@ -36,6 +36,13 @@
                 
 
                 <button class="btn" type="submit">Submit Claim</button>
+
+                @if (TempData["SubmitClaimFailed"] != null)
+                {
+                    <div class="alert alert-danger">
+                        @TempData["SubmitClaimFailed"]
+                    </div>
+                }
             </form>
 
         </div>
