--- a/CMCS Web App/Views/Home/Login.cshtml
+++ b/CMCS Web App/Views/Home/Login.cshtml
@@ -6,10 +6,10 @@
     <div class="wrapper">
         <div class="form-box">
             <h1>Staff Role</h1>
-            <p>Please select the appropriate option.</p>
+            <p>Please select your staff position.</p>
             <button class="btn admin" type="submit">Academic Manager</button>
             <button class="btn admin" type="submit">Programme Coordinator</button>
-            <button class="btn employee" type="submit">Lecturer</button>
+            <button class="btn lecturer" type="submit">Lecturer</button>
         </div>
         <div class="form-box">
             <h1>Login</h1>
