Updated Views, Database Schema and Controller
I was experiencing problems with adding migrations and updating the database. The new changes were not being detected, and therefore no modifications were being applied.

Deleted all previous migrations, and re-created the database for the project with the updated database schema.

Updated Views and Controllers, to accommodate for new database schema.

--- a/CMCS Web App/Views/Home/ReviewClaim.cshtml
+++ b/CMCS Web App/Views/Home/ReviewClaim.cshtml
@@ -28,8 +28,8 @@
                     {
                         <tr>
                             <td>@claim.ClaimId</td>
-                            <td>@claim.LecturerId</td>
-                            <td>@claim.Lecturer.FirstName @claim.Lecturer.Surname</td>
+                            <td>@claim.UserId</td>
+                            <td>@claim.User.FirstName @claim.User.Surname</td>
                             <td>R @claim.ClaimAmount</td>
                             <td>@claim.HoursWorked Hrs</td>
                             <td>R @claim.HourlyRate / h</td>
