--- a/CMCS Web App/Views/Home/TrackAllClaims.cshtml
+++ b/CMCS Web App/Views/Home/TrackAllClaims.cshtml
@@ -27,10 +27,10 @@
                 {
                     <tr>
                         <td>@claim.ClaimId</td>
-                        <td>@claim.LecturerId</td>
-                        <td>@claim.Lecturer.FirstName @claim.Lecturer.Surname</td>
-                        <td>@claim.Lecturer.Email</td>
-                        <td>@claim.Lecturer.Faculty</td>
+                        <td>@claim.UserId</td>
+                        <td>@claim.User.FirstName @claim.User.Surname</td>
+                        <td>@claim.User.Email</td>
+                        <td>@claim.User.Faculty</td>
                         <td>R @claim.ClaimAmount</td>
                         <td>@claim.HoursWorked Hrs</td>
                         <td>R @claim.HourlyRate / h</td>
