--- a/CMCS Web App/Views/Home/CreateClaim.cshtml
+++ b/CMCS Web App/Views/Home/CreateClaim.cshtml
@@ -12,7 +12,7 @@
             <form asp-controller="Home" asp-action="SubmitNewClaim" method="post" enctype="multipart/form-data">
                 
                 <div class="input-box">
-                    <input type="number" asp-for="LecturerId" required />
+                    <input type="number" asp-for="UserId" required />
                     <label>Lecturer ID</label>
                 </div>
 
