Create User Samples for Testing Purposes
Added a button to the Index View, once clicked it calls the Action in the Home Controller to create a list of User objects, and then inserts it into the database.

Updated the Access Modifier in the DbContext to make it accessible in the Home Controller.

--- a/CMCS Web App/Views/Home/Index.cshtml
+++ b/CMCS Web App/Views/Home/Index.cshtml
@@ -22,4 +22,10 @@
             tracking hours worked, and handling various administrative tasks efficiently.
         </p>
     </div>
+
+    <div class="box">
+        <form asp-controller="Home" asp-action="CreateUserSamples">
+            <button class="btn" type="submit">Create Users</button>
+        </form>
+    </div>
 </div>
