--- a/CMCS Web App/Views/Home/TrackAllClaims.cshtml
+++ b/CMCS Web App/Views/Home/TrackAllClaims.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CMCS_Web_App.Models.Claim>
+﻿@model IEnumerable<CMCS_Web_App.Models.UserClaim>
 @{
     ViewData["Title"] = "Track All Claims";
 }
@@ -26,7 +26,7 @@
                 @foreach (var claim in Model)
                 {
                     <tr>
-                        <td>@claim.ClaimId</td>
+                        <td>@claim.UserClaimId</td>
                         <td>@claim.UserId</td>
                         <td>@claim.User.FirstName @claim.User.Surname</td>
                         <td>@claim.User.Email</td>
@@ -34,7 +34,7 @@
                         <td>R @claim.ClaimAmount</td>
                         <td>@claim.HoursWorked Hrs</td>
                         <td>R @claim.HourlyRate / h</td>
-                        <td><a asp-controller="Home" asp-action="DownloadFile" asp-route-id="@claim.ClaimId">@claim.FileName</a></td>
+                        <td><a asp-controller="Home" asp-action="DownloadFile" asp-route-id="@claim.UserClaimId">@claim.FileName</a></td>
                         <td>
                             @if (claim.ClaimStatus == "Pending")
                             {
