--- a/CMCS Web App/Views/Shared/_Layout.cshtml
+++ b/CMCS Web App/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <a asp-controller="Home" asp-action="TrackAllClaims">Track All Claims</a>
             <a asp-controller="Home" asp-action="Login">Login</a>
             <a asp-controller="Home" asp-action="Register">Register</a>
+            <a asp-controller="Home" asp-action="Profile">Profile</a>
         </nav>
     </header>
 
